--- a/docs/new_tab/manifest.json
+++ b/docs/new_tab/manifest.json
@@ -13,5 +13,10 @@
     "16": "/icons/icon16.png",
     "48": "/icons/icon48.png",
     "128": "/icons/icon128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "midnight-aurora-new-tab@dorpascal.com"
+    }
   }
 }
